zetasql/parser/testdata/textmapper_lexer.test
[default language_features=ALL]
select 1;
--
QueryStatement [0-8] [select 1]
  Query [0-8] [select 1]
    Select [0-8] [select 1]
      SelectList [7-8] [1]
        SelectColumn [7-8] [1]
          IntLiteral(1) [7-8] [1]
--
SELECT
  1
==

select "abc";
--
QueryStatement [0-12] [select "abc"]
  Query [0-12] [select "abc"]
    Select [0-12] [select "abc"]
      SelectList [7-12] ["abc"]
        SelectColumn [7-12] ["abc"]
          StringLiteral [7-12] ["abc"]
            StringLiteralComponent("abc") [7-12] ["abc"]
--
SELECT
  "abc"
==

# TextMapper lexer should not ignore the leading BOM character '\xEF\xBB\xBF',
# i.e. the both flex and textmapper lexer should report an invalid character
# error.
﻿ select 1;
--
ERROR: Syntax error: Illegal input character "\357" [at 1:1]
﻿ select 1;
^
